vlib/v/parser/tests/for_mut_in_range.vv
for mut i in 0..5 {
}
